Sugati/src/objects/SupplierBookingImage__c.object
<CustomObject>
    <fields>
        <fullName>SBI_Attachement_Id__c</fullName>
        <label>Attachement Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Image__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp;  SBI_Attachement_Id__c , &apos; &apos;,70,100)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_Supplier_Booking__c</fullName>
        <label>Supplier Booking</label>
        <referenceTo>Supplier_Booking__c</referenceTo>
        <relationshipLabel>SupplierBookingImages</relationshipLabel>
        <relationshipName>SupplierBookingImages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SupplierBookingImage</label>
    <nameField>
        <displayFormat>SBI-{0000000000}</displayFormat>
        <label>SupplierBookingImage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplierBookingImages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>